# yousearch-api

./: .gitignore  Cargo.toml  README.md  Shuttle.toml  run  rust-toolchain  schema.sql
migrations/: 20230327135658_users.up.sql  20230401230910_users.up.sql  20230401231141_add-password-column-to-users-table.down.sql  20230401231141_add-password-column-to-users-table.up.sql  20230401231430_users-table-name-column-not-null.down.sql  20230401231430_users-table-name-column-not-null.up.sql  20230403134054_add-other-tables.down.sql  20230403134054_add-other-tables.up.sql  20230409005706_add-thumbnail-columns.down.sql  20230409005706_add-thumbnail-columns.up.sql  20230410163523_add-youtube-id-to-channels-table.down.sql  20230410163523_add-youtube-id-to-channels-table.up.sql  20230413134755_modify-captions-table-to-have-json-column.down.sql  20230413134755_modify-captions-table-to-have-json-column.up.sql  20230413141921_add-youtube-id-column-to-videos-table.down.sql  20230413141921_add-youtube-id-column-to-videos-table.up.sql  20230414135810_caption-table-modifications.down.sql  20230414135810_caption-table-modifications.up.sql
src/: api.rs  lib.rs  main.rs
src/endpoints/: general.rs  mod.rs  users.rs  videos.rs
src/utils/: captions.rs  environment.rs  mod.rs  transcriptions.rs
tests/: api.rs
