[package]
name = "yousearch-api"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = "1.0.148"
shuttle-rocket = { version = "0.12.0" }
shuttle-runtime = { version = "0.12.0" }
tokio = { version = "1.26.0" }
shuttle-shared-db = { version = "0.12.0", features = ["postgres"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres"] }